--- a/package.json
+++ b/package.json
@@ -13,23 +13,24 @@
 		"typecheck": "bunx tsc --noEmit"
 	},
 	"dependencies": {
+		"@agentuity/evals": "latest",
 		"@agentuity/frontend": "latest",
 		"@agentuity/react": "latest",
 		"@agentuity/runtime": "latest",
 		"@agentuity/schema": "latest",
 		"@agentuity/workbench": "latest",
+		"openai": "latest",
 		"react": "^19.2.0",
-		"react-dom": "^19.2.0",
-		"@agentuity/evals": "latest",
-		"openai": "latest"
+		"react-dom": "^19.2.0"
 	},
 	"devDependencies": {
 		"@agentuity/cli": "latest",
+		"@tailwindcss/typography": "^0.5.19",
+		"@tailwindcss/vite": "^4.1.18",
 		"@types/bun": "latest",
 		"@types/react": "^19.2.0",
 		"@types/react-dom": "^19.2.0",
-		"typescript": "^5",
-		"@tailwindcss/vite": "^4.1.18",
-		"tailwindcss": "^4.1.18"
+		"tailwindcss": "^4.1.18",
+		"typescript": "^5"
 	}
 }
