--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-	"name": "linkt-launch",
-	"version": "0.0.1",
-	"license": "Apache-2.0",
-	"private": true,
-	"module": ".agentuity/app.js",
-	"type": "module",
-	"scripts": {
-		"build": "agentuity build",
-		"dev": "agentuity dev",
-		"start": "bun .agentuity/app.js",
-		"deploy": "agentuity deploy",
-		"typecheck": "bunx tsc --noEmit"
-	},
-	"dependencies": {
-		"@agentuity/evals": "latest",
-		"@agentuity/frontend": "latest",
-		"@agentuity/react": "latest",
-		"@agentuity/runtime": "latest",
-		"@agentuity/schema": "latest",
-		"@agentuity/workbench": "latest",
-		"openai": "latest",
-		"react": "^19.2.0",
-		"react-dom": "^19.2.0"
-	},
-	"devDependencies": {
-		"@agentuity/cli": "latest",
-		"@tailwindcss/typography": "^0.5.19",
-		"@tailwindcss/vite": "^4.1.18",
-		"@types/bun": "latest",
-		"@types/react": "^19.2.0",
-		"@types/react-dom": "^19.2.0",
-		"tailwindcss": "^4.1.18",
-		"typescript": "^5"
-	}
+  "name": "linkt-launch",
+  "version": "0.0.1",
+  "license": "Apache-2.0",
+  "private": true,
+  "module": ".agentuity/app.js",
+  "type": "module",
+  "scripts": {
+    "build": "agentuity build",
+    "dev": "agentuity dev",
+    "start": "bun .agentuity/app.js",
+    "deploy": "agentuity deploy",
+    "typecheck": "bunx tsc --noEmit"
+  },
+  "dependencies": {
+    "@agentuity/evals": "latest",
+    "@agentuity/frontend": "latest",
+    "@agentuity/react": "latest",
+    "@agentuity/runtime": "^0.1.43",
+    "@agentuity/schema": "latest",
+    "@agentuity/workbench": "latest",
+    "@opencode-ai/sdk": "^1.1.40",
+    "openai": "latest",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
+  },
+  "devDependencies": {
+    "@agentuity/cli": "latest",
+    "@tailwindcss/typography": "^0.5.19",
+    "@tailwindcss/vite": "^4.1.18",
+    "@types/bun": "latest",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5"
+  }
 }
