--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@agentuity/runtime": "^0.1.43",
     "@agentuity/schema": "latest",
     "@agentuity/workbench": "latest",
+    "@linkt/sdk": "^0.5.0",
     "@opencode-ai/sdk": "^1.1.40",
     "openai": "latest",
     "react": "^19.2.0",
